[package]
name = "fling"
version = "0.1.0"
authors = ["Rodney Johnson <ask@rodneylab.com>"]
description = "A sample project with wasm-pack"
license = "MIT/Apache-2.0"
respository = "https://github.com/rodneylab/fling"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
openssl = "0.10"
openssl-sys = "0.9"
#ring = { version = "0.16", features = ["alloc", "std"] }
ring = "0.16"
wasm-bindgen = "0.2"

[dependencies.web-sys]
version = "0.3.4"
features = [
  'CssStyleDeclaration',
  'Document',
  'Element',
  'EventTarget',
  'HtmlCanvasElement',
  'HtmlElement',
  'MouseEvent',
  'Node',
  'Window',
]
