[package]
name = "fling"
version = "0.0.1"
authors = ["Rodney Johnson <ask@rodneylab.com>"]
description = "A sample project with wasm-pack"
license = "MIT/Apache-2.0"
respository = "https://github.com/rodneylab/fling"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
openssl = "0.10"
openssl-sys = "0.9"

